--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -9,6 +9,20 @@
 
 img {
     max-width: 100%;
+    width: 200px;
+}
+
+.jumbotron,
+.about,
+.info_bobox {
+    background-color: var(--bs-primary);
+    color: var(--bs-light);
+}
+
+.portfolio, 
+.contact {
+    background-color: var(--bs-light);
+    color: var(--bs-accenture);
 }
 /* #endregion Common */
 
@@ -44,6 +58,11 @@ nav {
 /* #endregion Header */
 
 /* #region Main */
-
+.line {
+    display: inline-block;
+    width: 100px;
+    border: 1px solid var(--bs-light);
+    border-radius: 1rem;
+} 
 /* #enderegion Main */
 /* #endregion Body */
